PandaSQL/Parser/PandaSQLParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : .\\Parser\\PandaSQL.g
 *     -                            On : 2012-04-22 18:06:55
 *     -                for the parser : PandaSQLParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "PandaSQLParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pPandaSQLParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pPandaSQLParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pPandaSQLParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pPandaSQLParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   PandaSQLParserTokenNames[13+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "Digit",
        (pANTLR3_UINT8) "IDENTIFIER",
        (pANTLR3_UINT8) "KW_FROM",
        (pANTLR3_UINT8) "KW_SELECT",
        (pANTLR3_UINT8) "KW_TABLE",
        (pANTLR3_UINT8) "Letter",
        (pANTLR3_UINT8) "TOK_ALL_COLUMNS",
        (pANTLR3_UINT8) "TOK_COLUMN_LIST",
        (pANTLR3_UINT8) "TOK_FROM",
        (pANTLR3_UINT8) "TOK_TABLE_NAME",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "'*'",
        (pANTLR3_UINT8) "';'"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 PandaSQLParser_statement_return
	statement    (pPandaSQLParser ctx);
static 
 PandaSQLParser_dml_statement_return
	dml_statement    (pPandaSQLParser ctx);
static 
 PandaSQLParser_select_statement_return
	select_statement    (pPandaSQLParser ctx);
static 
 PandaSQLParser_select_list_return
	select_list    (pPandaSQLParser ctx);
static 
 PandaSQLParser_from_clause_return
	from_clause    (pPandaSQLParser ctx);
static 
 PandaSQLParser_table_name_return
	table_name    (pPandaSQLParser ctx);
static void	PandaSQLParserFree(pPandaSQLParser ctx);
static void     PandaSQLParserReset (pPandaSQLParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = ".\\Parser\\PandaSQL.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new PandaSQLParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pPandaSQLParser
PandaSQLParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return PandaSQLParserNewSSD(instream, NULL);
}

/** \brief Create a new PandaSQLParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pPandaSQLParser
PandaSQLParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pPandaSQLParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pPandaSQLParser) ANTLR3_CALLOC(1, sizeof(PandaSQLParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in PandaSQLParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our PandaSQLParser interface
     */
    ctx->statement	= statement;
    ctx->dml_statement	= dml_statement;
    ctx->select_statement	= select_statement;
    ctx->select_list	= select_list;
    ctx->from_clause	= from_clause;
    ctx->table_name	= table_name;
    ctx->free			= PandaSQLParserFree;
    ctx->reset			= PandaSQLParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */
ADAPTOR	= ANTLR3_TREE_ADAPTORNew(instream->tstream->tokenSource->strFactory);

ctx->vectors	= antlr3VectorFactoryNew(0);
    /* Install the token table
     */
    PSRSTATE->tokenNames   = PandaSQLParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
PandaSQLParserReset (pPandaSQLParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 PandaSQLParserFree(pPandaSQLParser ctx)
 {
    /* Free any scope memory
     */

ctx->vectors->close(ctx->vectors);
/* We created the adaptor so we must free it
 */
ADAPTOR->free(ADAPTOR);
	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return PandaSQLParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_dml_statement_in_statement116  */
static	ANTLR3_BITWORD FOLLOW_dml_statement_in_statement116_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000010000) };
static  ANTLR3_BITSET_LIST FOLLOW_dml_statement_in_statement116	= { FOLLOW_dml_statement_in_statement116_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_set_in_statement119  */
static	ANTLR3_BITWORD FOLLOW_set_in_statement119_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_set_in_statement119	= { FOLLOW_set_in_statement119_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_select_statement_in_dml_statement138  */
static	ANTLR3_BITWORD FOLLOW_select_statement_in_dml_statement138_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_select_statement_in_dml_statement138	= { FOLLOW_select_statement_in_dml_statement138_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_KW_SELECT_in_select_statement150  */
static	ANTLR3_BITWORD FOLLOW_KW_SELECT_in_select_statement150_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000008000) };
static  ANTLR3_BITSET_LIST FOLLOW_KW_SELECT_in_select_statement150	= { FOLLOW_KW_SELECT_in_select_statement150_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_select_list_in_select_statement152  */
static	ANTLR3_BITWORD FOLLOW_select_list_in_select_statement152_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000040) };
static  ANTLR3_BITSET_LIST FOLLOW_select_list_in_select_statement152	= { FOLLOW_select_list_in_select_statement152_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_from_clause_in_select_statement154  */
static	ANTLR3_BITWORD FOLLOW_from_clause_in_select_statement154_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_from_clause_in_select_statement154	= { FOLLOW_from_clause_in_select_statement154_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_15_in_select_list176  */
static	ANTLR3_BITWORD FOLLOW_15_in_select_list176_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_15_in_select_list176	= { FOLLOW_15_in_select_list176_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_KW_FROM_in_from_clause196  */
static	ANTLR3_BITWORD FOLLOW_KW_FROM_in_from_clause196_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000020) };
static  ANTLR3_BITSET_LIST FOLLOW_KW_FROM_in_from_clause196	= { FOLLOW_KW_FROM_in_from_clause196_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_table_name_in_from_clause198  */
static	ANTLR3_BITWORD FOLLOW_table_name_in_from_clause198_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_table_name_in_from_clause198	= { FOLLOW_table_name_in_from_clause198_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_IDENTIFIER_in_table_name219  */
static	ANTLR3_BITWORD FOLLOW_IDENTIFIER_in_table_name219_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_IDENTIFIER_in_table_name219	= { FOLLOW_IDENTIFIER_in_table_name219_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start statement
 * .\\Parser\\PandaSQL.g:33:1: statement : dml_statement ^ ( ';' | EOF ) !;
 */
static PandaSQLParser_statement_return
statement(pPandaSQLParser ctx)
{
    PandaSQLParser_statement_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    set2;
    PandaSQLParser_dml_statement_return dml_statement1;
    #undef	RETURN_TYPE_dml_statement1
    #define	RETURN_TYPE_dml_statement1 PandaSQLParser_dml_statement_return

    pANTLR3_BASE_TREE set2_tree;

    /* Initialize rule variables
     */

    root_0 = NULL;

    set2       = NULL;
    dml_statement1.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    set2_tree   = NULL;


    retval.tree  = NULL;

    {
        // .\\Parser\\PandaSQL.g:34:2: ( dml_statement ^ ( ';' | EOF ) !)
        // .\\Parser\\PandaSQL.g:34:4: dml_statement ^ ( ';' | EOF ) !
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            FOLLOWPUSH(FOLLOW_dml_statement_in_statement116);
            dml_statement1=dml_statement(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto rulestatementEx;
            }

            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, dml_statement1.tree, root_0));

            set2=(pANTLR3_COMMON_TOKEN)LT(1);

            if ( LA(1) == EOF || LA(1) == 16 )
            {
                CONSUME();
                PERRORRECOVERY=ANTLR3_FALSE;
            }
            else
            {
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_MISMATCHED_SET_EXCEPTION;
                EXCEPTION->name         = (void *)ANTLR3_MISMATCHED_SET_NAME;
                EXCEPTION->expectingSet = NULL;

                goto rulestatementEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto rulestatementEx; /* Prevent compiler warnings */
    rulestatementEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end statement */

/**
 * $ANTLR start dml_statement
 * .\\Parser\\PandaSQL.g:37:1: dml_statement : select_statement ;
 */
static PandaSQLParser_dml_statement_return
dml_statement(pPandaSQLParser ctx)
{
    PandaSQLParser_dml_statement_return retval;


    pANTLR3_BASE_TREE root_0;

    PandaSQLParser_select_statement_return select_statement3;
    #undef	RETURN_TYPE_select_statement3
    #define	RETURN_TYPE_select_statement3 PandaSQLParser_select_statement_return


    /* Initialize rule variables
     */

    root_0 = NULL;

    select_statement3.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;




    retval.tree  = NULL;

    {
        // .\\Parser\\PandaSQL.g:38:2: ( select_statement )
        // .\\Parser\\PandaSQL.g:38:4: select_statement
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            FOLLOWPUSH(FOLLOW_select_statement_in_dml_statement138);
            select_statement3=select_statement(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruledml_statementEx;
            }

            ADAPTOR->addChild(ADAPTOR, root_0, select_statement3.tree);

        }

    }

    // This is where rules clean up and exit
    //
    goto ruledml_statementEx; /* Prevent compiler warnings */
    ruledml_statementEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end dml_statement */

/**
 * $ANTLR start select_statement
 * .\\Parser\\PandaSQL.g:41:1: select_statement : KW_SELECT select_list from_clause -> ^( KW_SELECT select_list from_clause ) ;
 */
static PandaSQLParser_select_statement_return
select_statement(pPandaSQLParser ctx)
{
    PandaSQLParser_select_statement_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    KW_SELECT4;
    PandaSQLParser_select_list_return select_list5;
    #undef	RETURN_TYPE_select_list5
    #define	RETURN_TYPE_select_list5 PandaSQLParser_select_list_return

    PandaSQLParser_from_clause_return from_clause6;
    #undef	RETURN_TYPE_from_clause6
    #define	RETURN_TYPE_from_clause6 PandaSQLParser_from_clause_return

    pANTLR3_BASE_TREE KW_SELECT4_tree;
    pANTLR3_REWRITE_RULE_TOKEN_STREAM stream_KW_SELECT;
    pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_select_list;
    pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_from_clause;
    /* Initialize rule variables
     */

    root_0 = NULL;

    KW_SELECT4       = NULL;
    select_list5.tree = NULL;

    from_clause6.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    KW_SELECT4_tree   = NULL;

    stream_KW_SELECT   = NULL;
    #define CREATE_stream_KW_SELECT  if (stream_KW_SELECT == NULL) {stream_KW_SELECT = antlr3RewriteRuleTOKENStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"token KW_SELECT"); } 
    stream_select_list   = NULL;
    #define CREATE_stream_select_list  if (stream_select_list == NULL) {stream_select_list = antlr3RewriteRuleSubtreeStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"rule select_list"); }
    stream_from_clause   = NULL;
    #define CREATE_stream_from_clause  if (stream_from_clause == NULL) {stream_from_clause = antlr3RewriteRuleSubtreeStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"rule from_clause"); }

    retval.tree  = NULL;

    {
        // .\\Parser\\PandaSQL.g:42:2: ( KW_SELECT select_list from_clause -> ^( KW_SELECT select_list from_clause ) )
        // .\\Parser\\PandaSQL.g:42:4: KW_SELECT select_list from_clause
        {
            KW_SELECT4 = (pANTLR3_COMMON_TOKEN) MATCHT(KW_SELECT, &FOLLOW_KW_SELECT_in_select_statement150);
            if  (HASEXCEPTION())
            {
                goto ruleselect_statementEx;
            }
             
            CREATE_stream_KW_SELECT; stream_KW_SELECT->add(stream_KW_SELECT, KW_SELECT4, NULL);


            FOLLOWPUSH(FOLLOW_select_list_in_select_statement152);
            select_list5=select_list(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleselect_statementEx;
            }

            CREATE_stream_select_list; stream_select_list->add(stream_select_list, select_list5.tree, NULL);

            FOLLOWPUSH(FOLLOW_from_clause_in_select_statement154);
            from_clause6=from_clause(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleselect_statementEx;
            }

            CREATE_stream_from_clause; stream_from_clause->add(stream_from_clause, from_clause6.tree, NULL);

            /* AST REWRITE
             * elements          : from_clause, KW_SELECT, select_list
             * token labels      : 
             * rule labels       : retval
             * token list labels : 
             * rule list labels  : 
             */
            {
            	pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_retval;

            	stream_retval=antlr3RewriteRuleSubtreeStreamNewAEE(ADAPTOR,  RECOGNIZER, (pANTLR3_UINT8)"token retval", retval.tree != NULL ? retval.tree : NULL);

            	root_0			    = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));
            	retval.tree    = root_0;
            	// 42:38: -> ^( KW_SELECT select_list from_clause )
            	{
            	    // .\\Parser\\PandaSQL.g:42:41: ^( KW_SELECT select_list from_clause )
            	    {
            	        pANTLR3_BASE_TREE root_1 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));
            	        root_1 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, 
            	        stream_KW_SELECT == NULL ? NULL : stream_KW_SELECT->nextNode(stream_KW_SELECT)
            	        , root_1));

            	        ADAPTOR->addChild(ADAPTOR, root_1, stream_select_list == NULL ? NULL : stream_select_list->nextTree(stream_select_list));

            	        ADAPTOR->addChild(ADAPTOR, root_1, stream_from_clause == NULL ? NULL : stream_from_clause->nextTree(stream_from_clause));

            	        ADAPTOR->addChild(ADAPTOR, root_0, root_1);
            	    }

            	}


            	retval.tree = root_0; // set result root
            	if (stream_retval != NULL) stream_retval->free(stream_retval);


            }
        }

    }

    // This is where rules clean up and exit
    //
    goto ruleselect_statementEx; /* Prevent compiler warnings */
    ruleselect_statementEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);
        if (stream_KW_SELECT != NULL) stream_KW_SELECT->free(stream_KW_SELECT);
        if (stream_select_list != NULL) stream_select_list->free(stream_select_list);
        if (stream_from_clause != NULL) stream_from_clause->free(stream_from_clause);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end select_statement */

/**
 * $ANTLR start select_list
 * .\\Parser\\PandaSQL.g:45:1: select_list : '*' -> ^( TOK_COLUMN_LIST TOK_ALL_COLUMNS ) ;
 */
static PandaSQLParser_select_list_return
select_list(pPandaSQLParser ctx)
{
    PandaSQLParser_select_list_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    char_literal7;

    pANTLR3_BASE_TREE char_literal7_tree;
    pANTLR3_REWRITE_RULE_TOKEN_STREAM stream_15;

    /* Initialize rule variables
     */

    root_0 = NULL;

    char_literal7       = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    char_literal7_tree   = NULL;

    stream_15   = NULL;
    #define CREATE_stream_15  if (stream_15 == NULL) {stream_15 = antlr3RewriteRuleTOKENStreamNewAE(ADAPTOR, RECOGNIZER, (pANTLR3_UINT8)"token 15"); } 

    retval.tree  = NULL;

    {
        // .\\Parser\\PandaSQL.g:46:2: ( '*' -> ^( TOK_COLUMN_LIST TOK_ALL_COLUMNS ) )
        // .\\Parser\\PandaSQL.g:46:4: '*'
        {
            char_literal7 = (pANTLR3_COMMON_TOKEN) MATCHT(15, &FOLLOW_15_in_select_list176);
            if  (HASEXCEPTION())
            {
                goto ruleselect_listEx;
            }
             
            CREATE_stream_15; stream_15->add(stream_15, char_literal7, NULL);


            /* AST REWRITE
             * elements          : 
             * token labels      : 
             * rule labels       : retval
             * token list labels : 
             * rule list labels  : 
             */
            {
            	pANTLR3_REWRITE_RULE_SUBTREE_STREAM stream_retval;

            	stream_retval=antlr3RewriteRuleSubtreeStreamNewAEE(ADAPTOR,  RECOGNIZER, (pANTLR3_UINT8)"token retval", retval.tree != NULL ? retval.tree : NULL);
